--- a/index.html
+++ b/index.html
@@ -3,27 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital, AI, and Informatics in Healthcare Education</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Healthcare Education</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
         <h1>Digital, AI, and Informatics in Healthcare Education</h1>
+        <nav>
+            <a href="ai/ai-healthcare.html">AI in Healthcare</a>
+            <a href="informatics/informatics.html">Informatics</a>
+            <a href="digital-tools/digital-tools.html">Digital Tools</a>
+        </nav>
     </header>
 
     <section class="intro">
-        <p>Explore how digital advancements, artificial intelligence (AI), and informatics are revolutionizing healthcare education. From virtual simulations to AI-driven learning platforms, technology is shaping the future of how healthcare professionals are trained and educated.</p>
-    </section>
-
-    <section class="content">
-        <h2>AI in Healthcare Education</h2>
-        <p>Artificial intelligence is transforming healthcare education by offering personalized learning experiences. AI-driven platforms can assess individual progress and adapt training programs to meet the specific needs of students, making learning more efficient and targeted.</p>
-
-        <h2>Informatics: Data-Driven Learning</h2>
-        <p>Informatics plays a crucial role in modern healthcare education by enabling the analysis of vast amounts of data. Educators can use data to improve curricula, monitor student performance, and predict areas where additional training may be needed, leading to more effective education programs.</p>
-
-        <h2>Digital Tools in Medical Training</h2>
-        <p>Digital technologies, such as virtual reality (VR) and augmented reality (AR), are enhancing medical training. These tools allow healthcare professionals to practice complex procedures in a virtual environment, improving their skills without risking patient safety. Additionally, online learning platforms offer flexible education options for healthcare professionals worldwide.</p>
+        <p>Welcome to the future of healthcare education. Explore how digital tools, AI, and informatics are shaping the next generation of medical professionals.</p>
     </section>
 
     <footer>
@@ -31,3 +25,4 @@
     </footer>
 </body>
 </html>
+
